src/main/java/com/fiap/skillriseapi/specs/error/ApiResponseForbidden.java
package com.fiap.skillriseapi.specs.error;

import io.swagger.v3.oas.annotations.media.Content;
import io.swagger.v3.oas.annotations.media.ExampleObject;
import io.swagger.v3.oas.annotations.responses.ApiResponse;
import org.springframework.http.MediaType;

import java.lang.annotation.ElementType;
import java.lang.annotation.Retention;
import java.lang.annotation.RetentionPolicy;
import java.lang.annotation.Target;

@Retention(RetentionPolicy.RUNTIME)
@Target({ElementType.TYPE, ElementType.METHOD, ElementType.PARAMETER, ElementType.ANNOTATION_TYPE})
@ApiResponse(
        responseCode = "403",
        description = "Acesso proibido - usuário não possui permissão para acessar este recurso",
        content = @Content(
                mediaType = MediaType.APPLICATION_JSON_VALUE,
                examples = @ExampleObject(
                        summary = "User does not have permission",
                        value = "{ \"status\": \"403\", \"message\": \"Usuário sem autorização!\" }"
                )
        )
)
public @interface ApiResponseForbidden {
}
